# StackCpp

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
Assignments/: .gitignore  stack-assignments.tex
Div/: clion-configuration.xml
Stack/: Main.cpp  Stack.cpp  Stack.h  StackTest.cpp
